// Vitest Snapshot v1

exports[`samples-generator > ./samples/v3.0/api-with-examples.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const variables = {};

const endpoints = makeApi([]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.0/callback-example.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const vLMDqDGAeww = z.object({ subscriptionId: z.string() });

const variables = {
    postStreams: vLMDqDGAeww,
};

const endpoints = makeApi([
    {
        method: "post",
        path: "/streams",
        description: \`subscribes a client to receive out-of-band data\`,
        requestFormat: "json",
        parameters: [
            {
                name: "callbackUrl",
                type: "Query",
                schema: z.string(),
            },
        ],
        response: z.object({ subscriptionId: z.string() }),
    },
]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.0/link-example.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const vObntp1skbx = z.object({ username: z.string(), uuid: z.string() }).partial();
const vZj8Kquc5yX = z.object({ slug: z.string(), owner: vObntp1skbx }).partial();
const vRlupufDwET = z
    .object({ id: z.number().int(), title: z.string(), repository: vZj8Kquc5yX, author: vObntp1skbx })
    .partial();
const vKMFj5kanr5 = z.array(vZj8Kquc5yX);
const vt4Y3jGvjMM = z.enum(["open", "merged", "declined"]).optional();
const vXjHxaxSqAF = z.array(vRlupufDwET);

const variables = {
    getPullRequestsById: vRlupufDwET,
    getPullRequestsByRepository: vXjHxaxSqAF,
    getRepositoriesByOwner: vKMFj5kanr5,
    getRepository: vZj8Kquc5yX,
    getUserByName: vObntp1skbx,
    pullrequest: vRlupufDwET,
    repository: vZj8Kquc5yX,
    state: vt4Y3jGvjMM,
    user: vObntp1skbx,
};

const endpoints = makeApi([
    {
        method: "get",
        path: "/2.0/repositories/:username",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: z.array(variables["getRepository"]),
    },
    {
        method: "get",
        path: "/2.0/repositories/:username/:slug",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "slug",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: variables["repository"],
    },
    {
        method: "get",
        path: "/2.0/repositories/:username/:slug/pullrequests",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "slug",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "state",
                type: "Query",
                schema: variables["state"],
            },
        ],
        response: z.array(variables["getPullRequestsById"]),
    },
    {
        method: "get",
        path: "/2.0/repositories/:username/:slug/pullrequests/:pid",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "slug",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "pid",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: variables["pullrequest"],
    },
    {
        method: "post",
        path: "/2.0/repositories/:username/:slug/pullrequests/:pid/merge",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "slug",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "pid",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: z.void(),
    },
    {
        method: "get",
        path: "/2.0/users/:username",
        requestFormat: "json",
        parameters: [
            {
                name: "username",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: variables["user"],
    },
]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.0/petstore.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const v1V4WeOqHOR = z.object({ id: z.number().int(), name: z.string(), tag: z.string().optional() });
const vE4h2yEASDL = z.array(v1V4WeOqHOR);
const vQV94vZN90C = z.object({ code: z.number().int(), message: z.string() });

const variables = {
    Error: vQV94vZN90C,
    Pet: v1V4WeOqHOR,
    Pets: vE4h2yEASDL,
    createPets: vQV94vZN90C,
    listPets: vQV94vZN90C,
    showPetById: vQV94vZN90C,
};

const endpoints = makeApi([
    {
        method: "get",
        path: "/pets",
        requestFormat: "json",
        parameters: [
            {
                name: "limit",
                type: "Query",
                schema: z.number().optional(),
            },
        ],
        response: variables["Pets"],
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
    {
        method: "post",
        path: "/pets",
        requestFormat: "json",
        response: z.void(),
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
    {
        method: "get",
        path: "/pets/:petId",
        requestFormat: "json",
        parameters: [
            {
                name: "petId",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: variables["Pet"],
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.0/petstore-expanded.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const vPXNN6VHlNv = z.object({ name: z.string(), tag: z.string().optional() });
const vdFAvdPGqCi = vPXNN6VHlNv.and(z.object({ id: z.number().int() }));
const vGqL1kemtHF = z.array(z.string()).optional();
const vuUCHA8LJFF = z.array(vdFAvdPGqCi);
const vQV94vZN90C = z.object({ code: z.number().int(), message: z.string() });

const variables = {
    Error: vQV94vZN90C,
    Pet: vdFAvdPGqCi,
    addPet: vQV94vZN90C,
    addPet_Body: vPXNN6VHlNv,
    deletePet: vQV94vZN90C,
    findPets: vQV94vZN90C,
    find_pet_by_id: vQV94vZN90C,
    tags: vGqL1kemtHF,
};

const endpoints = makeApi([
    {
        method: "get",
        path: "/pets",
        description: \`Returns all pets from the system that the user has access to
Nam sed condimentum est. Maecenas tempor sagittis sapien, nec rhoncus sem sagittis sit amet. Aenean at gravida augue, ac iaculis sem. Curabitur odio lorem, ornare eget elementum nec, cursus id lectus. Duis mi turpis, pulvinar ac eros ac, tincidunt varius justo. In hac habitasse platea dictumst. Integer at adipiscing ante, a sagittis ligula. Aenean pharetra tempor ante molestie imperdiet. Vivamus id aliquam diam. Cras quis velit non tortor eleifend sagittis. Praesent at enim pharetra urna volutpat venenatis eget eget mauris. In eleifend fermentum facilisis. Praesent enim enim, gravida ac sodales sed, placerat id erat. Suspendisse lacus dolor, consectetur non augue vel, vehicula interdum libero. Morbi euismod sagittis libero sed lacinia.

Sed tempus felis lobortis leo pulvinar rutrum. Nam mattis velit nisl, eu condimentum ligula luctus nec. Phasellus semper velit eget aliquet faucibus. In a mattis elit. Phasellus vel urna viverra, condimentum lorem id, rhoncus nibh. Ut pellentesque posuere elementum. Sed a varius odio. Morbi rhoncus ligula libero, vel eleifend nunc tristique vitae. Fusce et sem dui. Aenean nec scelerisque tortor. Fusce malesuada accumsan magna vel tempus. Quisque mollis felis eu dolor tristique, sit amet auctor felis gravida. Sed libero lorem, molestie sed nisl in, accumsan tempor nisi. Fusce sollicitudin massa ut lacinia mattis. Sed vel eleifend lorem. Pellentesque vitae felis pretium, pulvinar elit eu, euismod sapien.
\`,
        requestFormat: "json",
        parameters: [
            {
                name: "tags",
                type: "Query",
                schema: variables["tags"],
            },
            {
                name: "limit",
                type: "Query",
                schema: z.number().optional(),
            },
        ],
        response: z.array(variables["Pet"]),
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
    {
        method: "post",
        path: "/pets",
        description: \`Creates a new pet in the store. Duplicates are allowed\`,
        requestFormat: "json",
        parameters: [
            {
                name: "body",
                description: \`Pet to add to the store\`,
                type: "Body",
                schema: variables["addPet_Body"],
            },
        ],
        response: variables["Pet"],
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
    {
        method: "get",
        path: "/pets/:id",
        description: \`Returns a user based on a single ID, if the user does not have access to the pet\`,
        requestFormat: "json",
        parameters: [
            {
                name: "id",
                type: "Path",
                schema: z.number(),
            },
        ],
        response: variables["Pet"],
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
    {
        method: "delete",
        path: "/pets/:id",
        description: \`deletes a single pet based on the ID supplied\`,
        requestFormat: "json",
        parameters: [
            {
                name: "id",
                type: "Path",
                schema: z.number(),
            },
        ],
        response: z.void(),
        errors: [
            {
                status: "default",
                description: \`unexpected error\`,
                schema: variables["Error"],
            },
        ],
    },
]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.0/uspto.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const v60c7XUj6A7 = z
    .object({
        total: z.number().int(),
        apis: z.array(
            z
                .object({
                    apiKey: z.string(),
                    apiVersionNumber: z.string(),
                    apiUrl: z.string(),
                    apiDocumentationUrl: z.string(),
                })
                .partial()
        ),
    })
    .partial();
const vlyQvttKNVV = z.array(z.record(z.object({}).partial()));

const variables = {
    dataSetList: v60c7XUj6A7,
    list_data_sets: v60c7XUj6A7,
    perform_search: vlyQvttKNVV,
};

const endpoints = makeApi([
    {
        method: "get",
        path: "/",
        requestFormat: "json",
        response: variables["dataSetList"],
    },
    {
        method: "get",
        path: "/:dataset/:version/fields",
        description: \`This GET API returns the list of all the searchable field names that are in the oa_citations. Please see the &#x27;fields&#x27; attribute which returns an array of field names. Each field or a combination of fields can be searched using the syntax options shown below.\`,
        requestFormat: "json",
        parameters: [
            {
                name: "dataset",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "version",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: z.string(),
        errors: [
            {
                status: 404,
                description: \`The combination of dataset name and version is not found in the system or it is not published yet to be consumed by public.\`,
                schema: z.string(),
            },
        ],
    },
    {
        method: "post",
        path: "/:dataset/:version/records",
        description: \`This API is based on Solr/Lucene Search. The data is indexed using SOLR. This GET API returns the list of all the searchable field names that are in the Solr Index. Please see the &#x27;fields&#x27; attribute which returns an array of field names. Each field or a combination of fields can be searched using the Solr/Lucene Syntax. Please refer https://lucene.apache.org/core/3_6_2/queryparsersyntax.html#Overview for the query syntax. List of field names that are searchable can be determined using above GET api.\`,
        requestFormat: "json",
        parameters: [
            {
                name: "version",
                type: "Path",
                schema: z.string(),
            },
            {
                name: "dataset",
                type: "Path",
                schema: z.string(),
            },
        ],
        response: z.array(z.record(z.object({}).partial())),
        errors: [
            {
                status: 404,
                description: \`No matching record found for the given criteria.\`,
                schema: z.void(),
            },
        ],
    },
]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.1/non-oauth-scopes.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const variables = {};

const endpoints = makeApi([]);

export const api = new Zodios(endpoints);
"
`;

exports[`samples-generator > ./samples/v3.1/webhook-example.yaml 1`] = `
"import { makeApi, Zodios } from "@zodios/core";
import { z } from "zod";

const variables = {};

const endpoints = makeApi([]);

export const api = new Zodios(endpoints);
"
`;
